# VegaVoiceServer

./: CMakeLists.txt  Serialization.h  main.cpp
